--- a/Style.css
+++ b/Style.css
@@ -11,7 +11,7 @@
     width: 100%;
     height: 3.5rem;
     border: 2px solid rgb(153, 49, 49);
-    background-color: #343F56;
+    background-color: #ffffff;
     color: white;
     padding: 0.5rem;
     text-align: center;
